<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="bulls_digital">BULLS.DIGITAL</string>
    <string name="logo">logo</string>
    <string name="proximo">View Item List</string>
    <string name="select_item">Select Item</string>
    <string name="view_item">View Item</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="add_to_wish">Add to Wishlist</string>
    <string name="remove_from_cart">Remove From Cart</string>
    <string name="begin_checkout">Begin Checkout</string>
    <string name="add_shipping">Add Shipping</string>
    <string name="add_payment">Add Payment</string>
    <string name="purchase">Purchase</string>
    <string name="view_cart">View Cart</string>
</resources>
